--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.scss
@@ -26,3 +26,15 @@ mat-form-field{
 }
 
 
+#editBtn{
+
+  padding: .4rem 2.5rem;
+}
+#deleteBtn{
+
+  padding: .4rem 2.4rem;
+}
+
+#editProductM{
+  overflow: auto;
+}
